Configure gulp, rename theme with all internal files, create by programmaticaly block with social icons for header

--- a/themes/custom/fitpreg/templates/menu--left-menu.html.twig
+++ b/themes/custom/fitpreg/templates/menu--left-menu.html.twig
@@ -55,8 +55,16 @@
   {% endif %}
 {% endmacro %}
 <div class="social-links-in-menu">
-	<a class="soc-li" href="https://www.facebook.com/fitpregnancy/"><img height="40px" src="/sites/default/files/inline-images/face.png" width="40px" /></a>
-	<a class="soc-li" href="https://www.pinterest.com/fitpregnancy/"><img height="40px" src="/sites/default/files/inline-images/parking.png" width="40px" /></a>
-	<a class="soc-li" href="https://twitter.com/fitpregnancy/"><img height="40px" src="/sites/default/files/inline-images/twitter.png" width="40px" /></a>
-	<a class="soc-li" href="http://instagram.com/fitpregnancy/"><img height="40px" src="/sites/default/files/inline-images/insta.png" width="40px" /></a>
+  <a class="soc-li" href="https://www.facebook.com/fitpregnancy/">
+    <img height="40px" src="/sites/default/files/inline-images/face.png" width="40px" />
+  </a>
+  <a class="soc-li" href="https://www.pinterest.com/fitpregnancy/">
+    <img height="40px" src="/sites/default/files/inline-images/parking.png" width="40px" />
+  </a>
+  <a class="soc-li" href="https://twitter.com/fitpregnancy/">
+    <img height="40px" src="/sites/default/files/inline-images/twitter.png" width="40px" />
+  </a>
+  <a class="soc-li" href="http://instagram.com/fitpregnancy/">
+    <img height="40px" src="/sites/default/files/inline-images/insta.png" width="40px" />
+  </a>
 </div>
