--- a/modules/custom/main_page/templates/main_page.html.twig
+++ b/modules/custom/main_page/templates/main_page.html.twig
@@ -1,11 +1,26 @@
 <div class="main_page">
-	<div class="first-region">
-  	{{ content.first }}
-	</div>
-	<div class="second-region">
-  	{{ content.second }}
-	</div>
-	<div class="three-region">
-  	{{ content.three }}
-	</div>
+  <div class="left-part">
+  	<div class="first-region">
+    	{{ content.first }}
+  	</div>
+  	<div class="second-region">
+    	{{ content.second }}
+  	</div>
+  	<div class="three-region">
+    	{{ content.three }}
+  	</div>
+    <div class="fourth-region">
+      {{ content.fourth }}
+    </div>
+    <div class="fifth-region">
+      {{ content.fifth }}
+    </div>
+    <div class="sixth-region">
+      {{ content.sixth }}
+    </div>
+  </div>
+  <div class="right-sidebar">
+    {{ content.right }}
+  </div>
 </div>
+
