templeate for ajax block

--- a/themes/custom/fitpreg/templates/views-view--page-fot-ajax.html.twig
+++ b/themes/custom/fitpreg/templates/views-view--page-fot-ajax.html.twig
@@ -63,12 +63,14 @@
 
   {% if rows %}
     <div class="view-content">
-      {{ rows }}
-      {% if attachment_after %}
-      <div class="attachment attachment-after">
-        {{ attachment_after }}
+      <div class="all-rows">
+        {{ rows }}
+        {% if attachment_after %}
+        <div class="attachment attachment-after">
+          {{ attachment_after }}
+        </div>
+        {% endif %}
       </div>
-      {% endif %}
     </div>
   {% elseif empty %}
     <div class="view-empty">
