--- a/themes/custom/fitpreg/stylesheets/fitpreg.style.css
+++ b/themes/custom/fitpreg/stylesheets/fitpreg.style.css
@@ -2397,6 +2397,7 @@
     display: flex;
     justify-content: space-between;
     padding-right: 15px;
+    position: relative;
     /* end of Main menu */
     /* end of header left menu */
     /* end of search field block*/ }
@@ -2439,63 +2440,78 @@
       .region-header .secondline-blocks-wrapper #block-fitpreg-main-menu .menu .menu-item--expanded::after {
         content: "";
         font-family: 'FontAwesome'; }
-    .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-hamburger {
+    .region-header .secondline-blocks-wrapper .left-menu-hamburger {
       height: 48px;
       width: 60px; }
-      .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-hamburger .btn {
+      .region-header .secondline-blocks-wrapper .left-menu-hamburger .btn {
         display: block;
         height: auto;
         padding: 3px 0 12px;
         width: 100%; }
-        .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-hamburger .btn .line {
+        .region-header .secondline-blocks-wrapper .left-menu-hamburger .btn .line {
           height: 10px;
           width: 35px;
           border-bottom: 1px solid #000;
           display: block;
           margin: 0 auto; }
-    .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-wrapper {
-      display: none; }
-    .region-header .secondline-blocks-wrapper #block-fitpreg-searchform .search-icon {
+    .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu {
+      background-color: #000;
+      display: none;
+      position: absolute;
+      width: 250px;
+      z-index: 1; }
+      .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-wrapper .menu {
+        margin: 0; }
+    .region-header .secondline-blocks-wrapper .icon-wrapper .search-icon, .region-header .secondline-blocks-wrapper .icon-wrapper .close-search {
       cursor: pointer;
       font-size: 25px; }
-    .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form {
-      display: none;
-      position: relative;
-      margin: 0 auto;
-      width: 50%; }
-      .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form .form-search {
-        background-color: #f5f5f5;
-        border: none;
-        -webkit-border-radius: 40px;
-        -moz-border-radius: 40px;
-        border-radius: 40px;
-        height: 40px;
-        outline: none;
-        padding-left: 17px;
-        width: 100%; }
-      .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions {
-        height: 40px;
+      .region-header .secondline-blocks-wrapper .icon-wrapper .search-icon.close, .region-header .secondline-blocks-wrapper .icon-wrapper .close-search.close {
+        display: none; }
+    .region-header .secondline-blocks-wrapper #block-fitpreg-searchform {
+      display: none; }
+      .region-header .secondline-blocks-wrapper #block-fitpreg-searchform.open {
+        background-color: #fff;
+        display: block;
         position: absolute;
-        right: 0;
-        top: 0;
+        width: 86%;
         z-index: 1; }
-        .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions::after {
-          content: '\f002';
-          color: #ec188c;
-          cursor: pointer;
-          font-family: 'FontAwesome';
-          font-size: 24px;
-          font-weight: normal;
+      .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form {
+        position: relative;
+        margin: 0 auto;
+        width: 50%; }
+        .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form .form-search {
+          background-color: #f5f5f5;
+          border: none;
+          -webkit-border-radius: 40px;
+          -moz-border-radius: 40px;
+          border-radius: 40px;
+          height: 40px;
+          outline: none;
+          padding-left: 17px;
+          width: 100%; }
+        .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions {
+          height: 40px;
           position: absolute;
           right: 0;
-          top: 7px; }
-        .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions #edit-submit,
-        .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions #edit-submit--3 {
-          height: 100%;
-          opacity: 0;
-          position: relative;
-          width: 100%;
+          top: 0;
           z-index: 1; }
+          .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions::after {
+            content: '\f002';
+            color: #ec188c;
+            cursor: pointer;
+            font-family: 'FontAwesome';
+            font-size: 24px;
+            font-weight: normal;
+            position: absolute;
+            right: 0;
+            top: 7px; }
+          .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions #edit-submit,
+          .region-header .secondline-blocks-wrapper #block-fitpreg-searchform #search-block-form #edit-actions #edit-submit--3 {
+            height: 100%;
+            opacity: 0;
+            position: relative;
+            width: 100%;
+            z-index: 1; }
 
 /* end of Header */
 footer {
