Remove menu absolute property.

--- a/themes/custom/fitpreg/src/sass/components/_header.scss
+++ b/themes/custom/fitpreg/src/sass/components/_header.scss
@@ -182,10 +182,10 @@
     #block-fitpreg-left-menu {
       background-color: $color-black;
       display: none;
-      position: absolute;
+      //position: absolute;
       width: 250px;
       z-index: 1;
-      
+
       .left-menu-wrapper {
         .menu {
           margin: 0;
