--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -2476,12 +2476,27 @@
           display: block;
           margin: 0 auto; }
     .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu {
-      background-color: #000;
       display: none;
+      position: absolute;
+      top: 0;
+      background-color: #000;
       width: 250px;
-      z-index: 1; }
+      z-index: 1;
+      -webkit-animation-duration: 1s;
+              animation-duration: 1s;
+      -webkit-animation-iteration-count: 1;
+              animation-iteration-count: 1; }
       .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-wrapper .menu {
         margin: 0; }
+        .region-header .secondline-blocks-wrapper #block-fitpreg-left-menu .left-menu-wrapper .menu a {
+          display: block;
+          color: #fff;
+          text-transform: lowercase;
+          font-size: 15px;
+          line-height: 50px;
+          padding: 0 1rem;
+          text-decoration: none;
+          cursor: pointer; }
     .region-header .secondline-blocks-wrapper .icon-wrapper .search-icon, .region-header .secondline-blocks-wrapper .icon-wrapper .close-search {
       cursor: pointer;
       font-size: 25px; }
